3.0881:
 - Fix: DevMin fix.

3.0880:
 - Fix: Glyphs should now show in alpha order in the TM and SST
 - Fix: Different message if defending spy destroys a probe in the system.

3.0879:
 - Fix: Eveins should no longer destruct after an upgrade
 - Add: Upgrading and evein adds the remaining time for this level to the next
 - Mod: Admin changes to track Essentia. To detect multi-accounting abuses.
 - Mod: Admin changes to track more stuff.
 - Mod: Trel colonies get a slight boost.
 - Mod: Cult becomes active.
 - Fix: BHG recalculates incoming chains.

3.0878:
 - Fix: Fissure Sealers were sending extra email on home arrival.
 - Add: Cult of the Fissure added into code base.
 - Fix: Snarks will actually hit planet instead of doing a flyby.
 - Fix: Renaming a star will update the seizure law.
 - Fix: A moved space station will lose jurisdiction of stars out of range.
 - Fix: Burned spies don't get fetched.
 - Fix: Parliament doesn't trip on multiple inductions.
 - Add: TheDillonForge view method returns what it is working on.
 - Fix: Recalculate mining platforms if asteroid type is changed.

3.0877:
 - Fix: Shipyard,Intelligence,ThemePark work time now correctly updated
 - Mod: When a Fissure levels up, owning empire is warned.
 - Fix: Medals for buildings over level 31 and Asteroid A26 added.
 - Add: Upgrades can be cancelled from the Development Ministry
 - Add: Individual builds can be subsidized in the Development Ministry
 - Add: Fissures send email if they don't find a fissure at target.
 - Fix: Influence no longer left from dead SS added into stats.
 - Fix: Minimum extra spy training time made consistant.
 - Fix: Spaceport Seekers hit a random Spaceport, not just the same one.

3.0876:
 - Add: Seasonal gift
 - Fix: Add glyph medals for excav finds.
 - Fix: Compare vs max spies, not level when downgrading IntMin.
 - Fix: Downgrading your capitol should be possible to level 10 if you have a stockpile.
 - Fix: Recalc chains properly on Move System.