@@ -144,7 +144,7 @@
         "/wastetreatment" : { "description" : "Converts waste into water, ore, and energy. Waste treatment requires special chemical compounds derived from halite, sulfur, and trona.", "wiki" : "http://community.lacunaexpanse.com/wiki/waste-treatment-center" },
         "/waterproduction" : { "description" : "Converts energy and ore into water.  This is especially useful on planets with low concentrations of water.  A higher building level means more resources are converted.", "wiki" : "http://community.lacunaexpanse.com/wiki/water-production-plant" },
         "/waterpurification" : { "description" : "Produces water from the planet's sources. The higher the building level the more water it can purify.", "wiki" : "http://community.lacunaexpanse.com/wiki/water-purification-plant" },
-        "/waterreclamation" : { "description" : "Converts waste into water.  A higher building level means more resources are converted.  If you don't have a good supply of halite or sulfur you cannot treat waste water.", "wiki" : "http://community.lacunaexpanse.com/wiki/water-reclamation-plant" },
+        "/waterreclamation" : { "description" : "Converts waste into water.  A higher building level means more resources are converted.  If you don't have a good supply of halite or sulfur you cannot treat waste water.", "wiki" : "http://community.lacunaexpanse.com/wiki/water-reclamation-facility" },
         "/waterstorage" : { "description" : "Stores the water you've collected.  A higher building level allows more water to be stored.", "wiki" : "http://community.lacunaexpanse.com/wiki/water-storage-tank" },
         "/wheat" : { "description" : "Allows you to grow wheat on your planet.  You can only grow wheat on planets that are in orbits 2, 3 or 4 (the goldilox zone).  The Farm will produce more wheat for each level it is increased. All plants need a source of phosphorus to photosynthesize their food. Therefore you need a good source of gypsum, sulfur, or monazite for plants to thrive.", "wiki" : "http://community.lacunaexpanse.com/wiki/wheat-farm" },
         "/lcota" : { "description" : "A self contained city that produces all it's own resources and waste management. It also produces a lot extra for you to use to support your other infrastructure. Be sure to place it where all the plots around it are unoccupied, and on a planet where you have 9 available plots.", "wiki" : "http://community.lacunaexpanse.com/wiki/lost-city-of-tyleon" },
